fix: ats 0 idx empty space & collapse list item margin

--- a/src/css/collapse.scss
+++ b/src/css/collapse.scss
@@ -34,7 +34,6 @@
   & .collapse-list-item {
     margin-top: calc(var(--spacing) * 1.5);
     margin-left: calc(var(--spacing) * 2);
-    margin-right: calc(var(--spacing) * 3);
     &:first-child {
       margin-top: 0;
     }
